Task3 - Add new link

--- a/Test.html
+++ b/Test.html
@@ -8,5 +8,7 @@
         <h1>Hello World!</h1>
     
         <p>A new paragraph!</p>
+    
+        <a href="http://www.workmax.com">See WOrkMax</a>
     </body>
 </html>
